[package]
name = "websteer"
version = "0.1.0"
authors = ["Jayson Messenger <jayson.messenger@gmail.com>"]
description = "Route urls to specific browsers"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Arrowbox/websteer"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
structopt = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
dirs = "2.0"
